--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>git에 테스트</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="js/js.js"></script>
 </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-danger">
-hello world!
-                </h1>
-            </div>
-        </div>
-    </div>
 
+
+<body>
+<div w3-include-html="include/header.html"></div>
+<script src="js/url.js"></script>  <!-- HTML 문서에 외부 JavaScript 파일인 url.js를 포함시키는 역할을 합니다. -->
+<div w3-include-html="include/slide.html"></div>
+
+<div w3-include-html="include/footer.html"></div>
+<script>
+includeHTML();
+</script>
 </body>
 </html>
